removed redundant uriqueue class